# pressure-oscillation

./: .gitignore  .gitmodules  README.md  examples.py  main.py  pyproject.toml  ruff.toml  summarize.py
code-pkg/: pyproject.toml
code-pkg/src/code_pkg/: __init__.py  _data.py  types.py
code-pkg/src/code_pkg/api/: __init__.py  _api.py
code-pkg/src/code_pkg/components/: __init__.py  bc.py  core.py  fluid.py  interface.py  postprocessing.py  solid.py  traits.py
code-pkg/src/code_pkg/components/_data/: run2.P  run3.P
code-pkg/src/code_pkg/io/: __init__.py  _json.py
code-pkg/src/code_pkg/mesh/: _surface.py  api.py
code-pkg/src/code_pkg/mesh/data/ventricle_2d/: fluid_FE.B  fluid_FE.T  fluid_FE.X  fluid_quad_FE.B  fluid_quad_FE.T  fluid_quad_FE.X  solid_FE.B  solid_FE.T  solid_FE.X  solid_quad_FE.B  solid_quad_FE.T  solid_quad_FE.X
code-pkg/src/code_pkg/plotting/: __init__.py  _pressure.py
pfiles/: pfile_inflation.py
