[project]
name = "code-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Will Zhang", email = "willwz@umich.edu" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
code-pkg = "code_pkg:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
